--- a/.env.defaults
+++ b/.env.defaults
@@ -7,4 +7,4 @@ SIGNATURES_SERVER_URL=
 MARKETPLACE_CHAIN_ID=1
 COLLECTIONS_CHAIN_ID=137
 FF_RENTALS=1
-MIN_SALE_VALUE_IN_WEI=
+MIN_SALE_VALUE_IN_WEI=1000
